--- a/RnD.ProgressBarSample/RnD.ProgressBarSample/Views/Category/Index.cshtml
+++ b/RnD.ProgressBarSample/RnD.ProgressBarSample/Views/Category/Index.cshtml
@@ -5,7 +5,7 @@
     <h2>
         Category DataTables Sample</h2>
     <p>
-        @Html.ActionLink("Create Category", "Create", "Category", new { @class = "lnkAddCategory add-button" })
+        @Html.ActionLink("Create Category", "Create", "Category", new { @class = "lnkAddCategory button" })
     </p>
     <div id="categorys-data-table">
         <table id="categoryDataTable" class="dataTable">
