--- a/RnD.ProgressBarSample/RnD.ProgressBarSample/Views/Home/Index.cshtml
+++ b/RnD.ProgressBarSample/RnD.ProgressBarSample/Views/Home/Index.cshtml
@@ -15,12 +15,12 @@
 <div>
     <div id="get">
         <p>
-            <a id="lnkGet" class="add-button" href="/Home/GetMethod">Get Data</a>
+            <a id="lnkGet" class="button" href="/Home/GetMethod">Get Data</a>
         </p>
     </div>
     <div id="post">
         <p>
-            <a id="lnkPost" class="add-button" href="/Home/PostMethod">Post Data</a>
+            <a id="lnkPost" class="button" href="/Home/PostMethod">Post Data</a>
         </p>
     </div>
     <div id="displayData">
