--- a/RnD.ProgressBarSample/RnD.ProgressBarSample/Views/Product/Index.cshtml
+++ b/RnD.ProgressBarSample/RnD.ProgressBarSample/Views/Product/Index.cshtml
@@ -5,7 +5,7 @@
     <h2>
         Product DataTables Sample</h2>
     <p>
-        @Html.ActionLink("Create Product", "Create", "Product", new { @class = "lnkAddProduct add-button" })
+        @Html.ActionLink("Create Product", "Create", "Product", new { @class = "lnkAddProduct button" })
     </p>
     <div id="products-data-table">
         <table id="productDataTable" class="dataTable">
